Hack to make query-builder lines appear a bit better in IE8

--- a/public/css/query-builder.css
+++ b/public/css/query-builder.css
@@ -71,6 +71,7 @@
     position:absolute;
     left:-15px;
     width:15px;
+    height:60%;
     height:calc(50% + 4px);
     border-color:#ccc;
     border-style:solid;
