--- a/views/layout.tt
+++ b/views/layout.tt
@@ -70,7 +70,7 @@
                         </select>
                     </div>
                     <div class="col-md-2">
-                        <p>matches</p>
+                        <p>matches (<a href="" data-toggle="modal" data-target="#modalhelp_match">?</a>)</p>
                     </div>
                     <div class="col-md-5">
                         <div class="form-group">
@@ -240,6 +240,23 @@
                     </div>
                     <div class="modal-body">
                         <p>[% global.helptext.layout_perms %]</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+       <!-- Modal -->
+        <div class="modal fade" id="modalhelp_match" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">Field permissions</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>[% global.helptext.layout_match %]</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
