--- a/views/edit.tt
+++ b/views/edit.tt
@@ -217,7 +217,7 @@
     [% IF col.depended_by.size %]
         [% FOREACH depends IN dispcol.depended_by %]
             [% divid = "depend" _ dispcol.id _ "_" _ depends.id %]
-            [% IF col.type == "enum" %]
+            [% IF col.type == "enum" || col.type == "person" %]
                 [% js_valget = '$("option:selected", $(this)).text()' %]
             [% ELSE %]
                 [% js_valget = '$(this).val()' %]
