Show conditional fields when depending on pre-filled value

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -243,6 +243,7 @@
                             <div id="depend[% col.id %]_[% cc.id %]" [% UNLESS textval.match(c.regex) %]style="display:none" [% END %]>
                                 [% INCLUDE do_col parent = col col = cc %]
                             </div>
+                            [% jscode.push('$("#' _ col.id _ '").trigger("change");') %]
                         [% END %]
                     [% END %]
                 [% END %]
