--- a/views/login.tt
+++ b/views/login.tt
@@ -90,8 +90,21 @@
                             <input type="text" class="form-control" id="surname" name="surname">
                         </div>
                         <div class="form-group">
+                            <label for="title">Title:</label>
+                            <select class="form-control" id="title" name="title">
+                                <option></option>
+                                [% FOREACH title IN titles %]
+                                    <option value="[% title.id %]" [% IF edituser.title.id == title.id %]selected[% END %]>[% title.name | html_entity %]</option>
+                                [% END %]
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <label for="email">Email:</label>
                             <input type="text" class="form-control" id="email" name="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="telephone">Telephone:</label>
+                            <input type="text" class="form-control" id="telephone" name="telephone">
                         </div>
                         <div class="form-group">
                             <label for="account_request_notes">Notes:</label>
