--- a/views/data.tt
+++ b/views/data.tt
@@ -23,7 +23,11 @@
                 <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="drop_view">
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0">Create new view</a></li>
                     [% IF v %]
+                        [% IF !v.global OR user.permission.layout %]
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/[% v.id %]">Edit this view</a></li>
+                        [% END %]
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0?clone=[% v.id %]">Clone this view</a></li>
+                        <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_alert">Alert me</a></li>
                     [% END %]
                     <li role="presentation" class="divider"></li>
                     [% first = 1 %]
@@ -41,11 +45,6 @@
                     [% END %]
                 </ul>
             </div>
-            [% IF v AND (!v.global OR user.permission.layout) %]
-                <div class="btn-group">
-                    <a href="/view/[% v.id %]" class="btn btn-default" role="button">Customise view</a>
-                </div>
-            [% END %]
             [% IF user.permission.create %]
                 <div class="btn-group">
                     <a href="/edit/" class="btn btn-default" role="button">New entry</a>
@@ -86,3 +85,32 @@
     [% INCLUDE 'data_table.tt' %]
 [% END %]
 
+<!-- Modal -->
+[% IF v %]
+    <div class="modal fade" id="modal_alert" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form role="form" method="post">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Configure alert for [% v.name %]</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="frequency">Alert me:</label>
+                        <select class="form-control" name="frequency">
+                            <option value="" [% IF sort.column.id == column.id %]selected[% END %]>Never</option>
+                            <option value="0" [% IF sort.column.id == column.id %]selected[% END %]>Instantly</option>
+                            <option value="24" [% IF sort.column.id == column.id %]selected[% END %]>Every 24 hours</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="submit" name="alert" value="[% v.id %]" class="btn btn-primary">Submit</button>
+                </div>
+                </form>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+[% END %]
